fix food creation bug